--- a/package.json
+++ b/package.json
@@ -11,18 +11,24 @@
   },
   "dependencies": {
     "@react-native-community/cameraroll": "^1.5.2",
+    "@react-native-community/checkbox": "^0.3.0",
     "@react-native-community/masked-view": "^0.1.7",
     "@react-navigation/bottom-tabs": "^5.2.5",
+    "@react-navigation/material-top-tabs": "^5.1.7",
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.2.9",
+    "i": "^0.3.6",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-picker": "^2.3.1",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.4.0"
+    "react-native-screens": "^2.4.0",
+    "react-native-simple-radio-button": "^2.7.4",
+    "react-native-tab-view": "^2.13.0"
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
